fix: Fix order status styles by removing extra margin

--- a/src/VirtoCommerce.OrdersModule.Web/Content/css/orderModule.css
+++ b/src/VirtoCommerce.OrdersModule.Web/Content/css/orderModule.css
@@ -81,7 +81,6 @@
 .vc-order .order-status .status {
     font-size: 15px;
     font-weight: 500;
-    margin: 0 0 5px;
 }
 
 .vc-order .order-status .reason {
